--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-
+    "build": "vite build"
   },
   "dependencies": {
     "react": "^19.1.0",
